Increase jvm memory